Publishing to gh-pages (publish.sh)

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
               </div>
             </div>
             
-            <img src="img/portfolio/%25!s%28%3cnil%3e%29" class="img-responsive" alt="">
+            <img src="https://hmstepanek.github.io/flipside/img/portfolio/mo-sale.jpeg" class="img-responsive" alt="">
           </a>
           <div class="portfolio-caption">
             <h4>Mo</h4>
@@ -540,7 +540,7 @@
           <div class="col-lg-8 col-lg-offset-2">
             <div class="modal-body">
               <h2>Mo</h2>
-              <p class="item-intro text-muted">Hunte/Jumper/Eq</p>
+              <p class="item-intro text-muted">Hunter/Jumper/Eq</p>
               
               <img class="img-responsive img-centered" src="https://hmstepanek.github.io/flipside/img/portfolio/mo-sale.jpeg" alt="">
               <p></p>
